tests/negative/oob_index.disturb
n = (number){1};
x = n[2];
